# truckersmp-cli

./: .gitignore  .pylintrc  LICENSE  MANIFEST.in  Makefile  README-de_DE  README.md  gen_completions  proton.json  setup.cfg  setup.py  truckersmp-cli  truckersmp-cli.c
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: auto_release.yaml  build_and_upload_inject_program.yaml  check_gen_completions.yaml  check_main_script.yaml  check_proton_json.yaml  run_tests.yaml
truckersmp_cli/: __init__.py  args.py  configfile.py  downloads.py  flatpak_helper.py  gamestarter.py  logger.py  main.py  proton.json  steamcmd.py  steamruntime.json  steamruntime_helper.py  truckersmp.py  utils.py  variables.py
