[metadata]
name = truckersmp-cli
version = file: RELEASE
description = A simple launcher for TruckersMP to be used with Wine/Proton
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/truckersmp-cli/truckersmp-cli
project_urls =
    Bug Tracker = https://github.com/truckersmp-cli/truckersmp-cli/issues
    Source Code = https://github.com/truckersmp-cli/truckersmp-cli
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Games/Entertainment
    Topic :: Games/Entertainment :: Simulation
platforms = x86_64 POSIX systems

[options]
python_requires = >=3.6
packages = truckersmp_cli
scripts = truckersmp-cli
zip_safe = False

[options.extras_require]
optional = setuptools; vdf

[options.package_data]
truckersmp_cli =
    proton.json
    steamruntime.json
    truckersmp-cli.exe

[flake8]
max-line-length = 90
